added edit model, view and method incontroller

--- a/TARpe22ShopVaitmaa/Views/Spaceships/Index.cshtml
+++ b/TARpe22ShopVaitmaa/Views/Spaceships/Index.cshtml
@@ -1,4 +1,7 @@
 ﻿@model IEnumerable<TARpe22ShopVaitmaa.Models.Spaceship.SpaceshipIndexViewModel>
+@{
+    int rowNumber = 1;
+}
 <div class="h1">
     Products
 </div>
@@ -22,7 +25,7 @@
             @foreach (var spaceship in Model)
             {                
                 <tr>
-                    <td>1</td>
+                    <td>@rowNumber</td>
                     <td>@spaceship.Name</td>
                     <td>@spaceship.Type</td>
                     <td>@spaceship.PassengerCount</td>
@@ -32,6 +35,7 @@
                         <input asp-action="delete" asp-controller="spaceship" asp-route-id="@spaceship.Id" class="btn btn-danger" type="submit" value="Delete"/>
                     </td>
                 </tr>
+                rowNumber +=1;
             }
         </tbody>
     </table>
