--- a/TARpe22ShopVaitmaa/Views/Spaceships/Edit.cshtml
+++ b/TARpe22ShopVaitmaa/Views/Spaceships/Edit.cshtml
@@ -58,12 +58,6 @@ else
             </div>
         </div>
         <div class="form-group row">
-            <label asp-for="FuelConsumption" class="col-sm-2 co9l-form-label"></label>
-            <div class="col-sm-10">
-                <input asp-for="Name" class="form-control"/>
-            </div>
-        </div>
-        <div class="form-group row">
             <label asp-for="PassengerCount" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
                 <input asp-for="PassengerCount" class="form-control" />
@@ -136,7 +130,7 @@ else
             </div>
         </div>
         <input asp-action="add" asp-controller="spaceships" type="submit" class="btn btn-primary" value="Add" />
-        <a asp-action="edit" asp-controller="spaceships" class="btn btn-primary">Edit</a>
         <input asp-action="update" asp-controller="spaceships" type="submit" class="btn btn-primary" value="Update" />
+        <a asp-action="index" asp-controller="spaceships" class="btn btn-primary">Cancel</a>
     </form>
 </div>
