--- a/TARpe22ShopVaitmaa/Views/Spaceships/Index.cshtml
+++ b/TARpe22ShopVaitmaa/Views/Spaceships/Index.cshtml
@@ -31,8 +31,9 @@
                     <td>@spaceship.PassengerCount</td>
                     <td>@spaceship.EnginePower</td>
                     <td>
+                        <a asp-action="details" asp-controller="spaceships" asp-route-id="@spaceship.Id" class="btn btn-info">Details</a>
                         <a asp-action="edit" asp-controller="spaceships" asp-route-id="@spaceship.Id" class="btn btn-primary">Edit</a>
-                        <input asp-action="delete" asp-controller="spaceships" asp-route-id="@spaceship.Id" class="btn btn-danger" type="submit" value="Delete"/>
+                        <a asp-action="delete" asp-controller="spaceships" asp-route-id="@spaceship.Id" class="btn btn-danger">Delete</a>
                     </td>
                 </tr>
                 rowNumber +=1;
