--- a/TARpe22ShopVaitmaa/Views/Spaceships/Index.cshtml
+++ b/TARpe22ShopVaitmaa/Views/Spaceships/Index.cshtml
@@ -32,7 +32,7 @@
                     <td>@spaceship.EnginePower</td>
                     <td>
                         <a asp-action="details" asp-controller="spaceships" asp-route-id="@spaceship.Id" class="btn btn-info">Details</a>
-                        <a asp-action="edit" asp-controller="spaceships" asp-route-id="@spaceship.Id" class="btn btn-primary">Edit</a>
+                        <a asp-action="update" asp-controller="spaceships" asp-route-id="@spaceship.Id" class="btn btn-primary">Edit</a>
                         <a asp-action="delete" asp-controller="spaceships" asp-route-id="@spaceship.Id" class="btn btn-danger">Delete</a>
                     </td>
                 </tr>
