--- a/TARpe22ShopVaitmaa/Views/Spaceships/Index.cshtml
+++ b/TARpe22ShopVaitmaa/Views/Spaceships/Index.cshtml
@@ -6,7 +6,7 @@
     Products
 </div>
 <div>
-    <a asp-action="add" asp-controller="spaceships" type="submit" class="btn btn-primary">Add</a>
+    <a asp-action="create" asp-controller="spaceships" type="submit" class="btn btn-primary">Add</a>
 </div>
 
 <form method="post">
