--- a/TARpe22ShopVaitmaa/Views/Spaceships/CreateUpdate.cshtml
+++ b/TARpe22ShopVaitmaa/Views/Spaceships/CreateUpdate.cshtml
@@ -128,6 +128,14 @@ else
                 <input asp-for="Manufacturer" class="form-control" />
             </div>
         </div>
+        <div class="form-group row">
+            <label asp-for="Files" class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-5">
+                <input class="form-control custom-file-input" asp-for="Files" multiple type="file"/>
+                <label class="custom-file-label">Choose File...</label>
+            </div>
+        </div>
+
         <hr />
         @foreach (var images in Model.Image)
         {
@@ -145,3 +153,23 @@ else
         <a asp-action="index" asp-controller="spaceships" class="btn btn-primary">Cancel</a>
     </form>
 </div>
+
+@section Scripts 
+{
+    <script>
+        $(document).ready(function() 
+        {
+            $('custom-file-input').on("change",function()
+            {
+                var fileLabel = $(this).next('custom-file-label');
+                var files = $(this)[0].files;
+                if(files.length > 1){
+                    fileLabel.html(files.length + ' files selected');
+                }
+                else if (files.length == 1) {
+                    fileLabel.html(files[0].name);
+                }
+            })
+        })
+    </script>
+}
