--- a/TARpe22ShopVaitmaa/Views/Spaceships/Details.cshtml
+++ b/TARpe22ShopVaitmaa/Views/Spaceships/Details.cshtml
@@ -105,6 +105,10 @@
             <label asp-for="ModifiedAt" class="col-sm-2 col-form-label"></label>
             @Html.DisplayFor(model => model.ModifiedAt)
         </div>
+        @foreach (var images in Model.Image)
+        {
+            <partial name="_Images" model="images"/>
+        }
     </dl>
     <a asp-action="index" asp-controller="spaceships" class="btn btn-danger">Index</a>
 </div>
