--- a/TARpe22ShopVaitmaa/Views/RealEstates/CreateUpdate.cshtml
+++ b/TARpe22ShopVaitmaa/Views/RealEstates/CreateUpdate.cshtml
@@ -128,7 +128,7 @@ else
         </div>
 
         <div class="form-group row">
-            <label asp-for="ˇWhenEstateListedAt" class="col-sm-2 col-form-label"></label>
+            <label asp-for="WhenEstateListedAt" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
                 <input asp-for="WhenEstateListedAt" class="form-control" />
             </div>
