finished adding images to realestates, hopefully works properly

--- a/TARpe22ShopVaitmaa/Views/RealEstates/CreateUpdate.cshtml
+++ b/TARpe22ShopVaitmaa/Views/RealEstates/CreateUpdate.cshtml
@@ -156,6 +156,11 @@ else
         </div>
         <hr/>
 
+        @foreach (var images in Model.FileToApiViewModels)
+        {
+            <partial name="_Images" model="images"/>
+            <input asp-action="removeImage" asp-controller="realEstates" asp-route-imageId="@images.ImageId" type="submit" class="btn btn-danger" value="Remove Image"/>
+        }
 
         @if (Model.Id.HasValue)
         {
