--- a/TARpe22ShopVaitmaa/Views/RealEstates/Delete.cshtml
+++ b/TARpe22ShopVaitmaa/Views/RealEstates/Delete.cshtml
@@ -129,10 +129,10 @@
             @Html.DisplayFor(model => model.ModifiedAt)
         </div>
 
-@*        @foreach (var images in Model.Images)
+        @foreach (var images in Model.FileToApiViewModels)
         {
-            <partial name="_images" model="images" />
-        }*@
+            <partial name="_Images" model="images" />
+        }
     </dl>
     <form asp-action="DeleteConfirmation">
         <input type="hidden" asp-for="Id" />
