--- a/TARpe22ShopVaitmaa/Views/RealEstates/Details.cshtml
+++ b/TARpe22ShopVaitmaa/Views/RealEstates/Details.cshtml
@@ -117,10 +117,10 @@
             @Html.DisplayFor(model => model.ModifiedAt)
         </div>
 
-        @*        @foreach (var images in Model.Images)
+        @foreach (var images in Model.FileToApiViewModels)
         {
-        <partial name="_images" model="images" />
-        }*@
+            <partial name="_Images" model="images" />
+        }
     </dl>
     <a asp-action="index" asp-controller="realEstates" class="btn btn-primary">Cancel</a>
 </div>
