--- a/TARpe22ShopVaitmaa/Views/RealEstates/CreateUpdate.cshtml
+++ b/TARpe22ShopVaitmaa/Views/RealEstates/CreateUpdate.cshtml
@@ -39,12 +39,12 @@ else
         <div class="form-group row">
             <label asp-for="County" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
-                <input asp-forCounty class="form-control" />
+                <input asp-for="County" class="form-control" />
             </div>
         </div>
 
         <div class="form-group row">
-            <label asp-forCountry class="col-sm-2 col-form-label"></label>
+            <label asp-for="Country" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
                 <input asp-for="Country" class="form-control" />
             </div>
@@ -137,14 +137,14 @@ else
         <div class="form-group row">
             <label asp-for="IsPropertySold" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
-                <input asp-for="IsPropertySold" class="form-control" />
+                <input asp-for="IsPropertySold" class="form-check" />
             </div>
         </div>
 
         <div class="form-group row">
             <label asp-for="DoesHaveSwimmingPool" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
-                <input asp-for="DoesHaveSwimmingPool" class="form-control" />
+                <input asp-for="DoesHaveSwimmingPool" class="form-check" />
             </div>
         </div>
 
@@ -155,6 +155,16 @@ else
             </div>
         </div>
         <hr/>
+
+        <div class="form-group row">
+            <label asp-for="Files" class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-5">
+                <div class="custom-file">
+                    <input class="form-control custom-file-input" asp-for="Files" multiple type="file" />
+                    <label class="custom-file-label">Choose File...</label>
+                </div>
+            </div>
+        </div>
 
         @foreach (var images in Model.FileToApiViewModels)
         {
@@ -172,3 +182,21 @@ else
         }
     </form>
 </div>
+
+@section Scripts 
+{
+    <script>
+        $(document).ready(function () {
+            $('custom-file-input').on("change", function()  {
+                var fileLabel = $(this).next('custom-file-label');
+                var files = $(this)[0].files;
+                if (files.length > 1) {
+                    fileLabel.html(files.length + ` files selected`);
+                }
+                else if (files.length == 1) {
+                    fileLabel.html(files[0].name);
+                }
+            });
+        });
+    </script>
+}
