--- a/TARpe22ShopVaitmaa/Views/RealEstates/_Images.cshtml
+++ b/TARpe22ShopVaitmaa/Views/RealEstates/_Images.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TARpe22ShopVaitmaa.Models.RealEstate.FileToApiViewModel
 @{
-    var photoPaths = "~/multipleFileUpload" + (Model.FilePath ?? "noimage.jpg");
+    var photoPaths = "~/multipleFileUpload/" + (Model.FilePath ?? "noimage.jpg");
 }
 <div class="form-group row col-sm-4 offset-2">
     <div>@Model.FilePath</div>
