--- a/TARpe22ShopVaitmaa/Views/Shared/_Layout.cshtml
+++ b/TARpe22ShopVaitmaa/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="RealEstates" asp-action="Index">Real Estate</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="WeatherForecasts" asp-action="Index">Weather Forecast</a>
+                        </li>
                     </ul>
                 </div>
             </div>
