--- a/TARpe22ShopVaitmaa/Views/WeatherForecasts/City.cshtml
+++ b/TARpe22ShopVaitmaa/Views/WeatherForecasts/City.cshtml
@@ -3,77 +3,100 @@
 <h1>City</h1>
 
 <div class="container">
-    <div class="ˇform-group col-md-3">
+    <div class="form-group col-md-3">
         <h2>Forecast for the selected City</h2>
-
-        <label asp-for="Date"></label>
-        <span class="badge">@Model.Date</span>
-        <br />
-        <label asp-for="EpochDate"></label>
-        <span class="badge">@Model.EpochDate</span>
-        <br />
-        <label asp-for="Severity"></label>
-        <span class="badge">@Model.Severity</span>
-        <br />
-        <label asp-for="Text"></label>
-        <span class="badge">@Model.Text</span>
-        <br />
-        <label asp-for="MobileLink"></label>
-        <span class="badge">@Model.MobileLink</span>
-        <br />
-        <label asp-for="Link"></label>
-        <span class="badge">@Model.Link</span>
-        <br />
-        <label asp-for="Category"></label>
-        <span class="badge">@Model.Category</span>
-        <br />
-        <label asp-for="Temperature.Minimum.Value"></label>
-        <span class="badge">@Model.Temperature.Minimum.Value</span>
-        <br />
-        <label asp-for="Temperature.Minimum.Unit"></label>
-        <span class="badge">@Model.Temperature.Minimum.Unit</span>
-        <br />
-        <label asp-for="Temperature.Minimum.UnitType"></label>
-        <span class="badge">@Model.Temperature.Minimum.UnitType</span>
-        <br />
-        <label asp-for="Temperature.Maximum.Value"></label>
-        <span class="badge">@Model.Temperature.Maximum.Value</span>
-        <br />
-        <label asp-for="Temperature.Maximum.Unit"></label>
-        <span class="badge">@Model.Temperature.Maximum.Unit</span>
-        <br />
-        <label asp-for="Temperature.Maximum.UnitType"></label>
-        <span class="badge">@Model.Temperature.Maximum.UnitType</span>
-        <br />
-        <label asp-for="DayCycle.Icon"></label>
-        <span class="badge">@Model.DayCycle.Icon</span>
-        <br />
-        <label asp-for="DayCycle.IconPhrase"></label>
-        <span class="badge">@Model.DayCycle.IconPhrase</span>
-        <br />
-        <label asp-for="DayCycle.HasPrecipitation"></label>
-        <span class="badge">@Model.DayCycle.HasPrecipitation</span>
-        <br />
-        <label asp-for="DayCycle.PrecipitationType"></label>
-        <span class="badge">@Model.DayCycle.PrecipitationType</span>
-        <br />
-        <label asp-for="DayCycle.PrecipitationIntensity"></label>
-        <span class="badge">@Model.DayCycle.PrecipitationIntensity</span>
-        <br />
-        <label asp-for="NightCycle.Icon"></label>
-        <span class="badge">@Model.NightCycle.Icon</span>
-        <br />
-        <label asp-for="NightCycle.IconPhrase"></label>
-        <span class="badge">@Model.NightCycle.IconPhrase</span>
-        <br />
-        <label asp-for="NightCycle.HasPrecipitation"></label>
-        <span class="badge">@Model.NightCycle.HasPrecipitation</span>
-        <br />
-        <label asp-for="NightCycle.PrecipitationType"></label>
-        <span class="badge">@Model.NightCycle.PrecipitationType</span>
-        <br />
-        <label asp-for="NightCycle.PrecipitationIntensity"></label>
-        <span class="badge">@Model.NightCycle.PrecipitationIntensity</span>
-        <br />
+        <dl class="row">
+            <div class="form-group-row">
+                <label asp-for="Date" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.Date)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="EpochDate" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.EpochDate)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="Severity" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.Severity)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="Text" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.Text)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="MobileLink" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.MobileLink)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="Link" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.Link)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="Category" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.Category)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="TempMinValue" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.TempMinValue)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="TempMinUnit" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.TempMinUnit)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="TempMinUnitType" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.TempMinUnitType)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="TempMaxValue" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.TempMaxValue)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="TempMaxUnit" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.TempMaxUnit)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="TempMaxUnitType" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.TempMaxUnitType)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="DayIcon" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.DayIcon)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="DayIconPhrase" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.DayIconPhrase)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="DayHasPrecipitation" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.DayHasPrecipitation)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="DayPrecipitationType" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.DayPrecipitationType)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="DayPrecipitationIntensity" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.DayPrecipitationIntensity)
+            </div>            <div class="form-group-row">
+                <label asp-for="NightIcon" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.NightIcon)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="NightIconPhrase" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.NightIconPhrase)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="NightHasPrecipitation" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.NightHasPrecipitation)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="NightPrecipitationType" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.NightPrecipitationType)
+            </div>
+            <div class="form-group-row">
+                <label asp-for="NightPrecipitationIntensity" class="col-sm-2 col-form-label"></label>
+                @Html.DisplayFor(model => model.NightPrecipitationIntensity)
+            </div>
+        </dl>
     </div>
 </div>
