bug fixes blabla kedakotib

--- a/TARpe22ShopVaitmaa/Views/Shared/_Layout.cshtml
+++ b/TARpe22ShopVaitmaa/Views/Shared/_Layout.cshtml
@@ -32,10 +32,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="RealEstates" asp-action="Index">Real Estate</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="Index">Car</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="WeatherForecasts" asp-action="Index">Weather Forecast</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Email" asp-action="Index">Spämm</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="openWeather" asp-action="Index">OpenWeather</a>
                         </li>
                     </ul>
                 </div>
